# s042TextAttribute-Linux

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: main.cpp
